--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,60 +9,93 @@
     android:orientation="vertical"
     tools:context=".HomeActivity">
 
-    <LinearLayout
+    <androidx.drawerlayout.widget.DrawerLayout
         android:layout_width="match_parent"
-        android:layout_height="57dp"
+        android:layout_height="match_parent"
+        android:id="@+id/drawerLayout"
         android:background="@color/primary"
-        android:orientation="horizontal">
+        tools:openDrawer="start"
+        android:orientation="vertical">
 
-
-        <ImageView
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:src="@drawable/dropelist"/>
-
-        <TextView
+        <com.google.android.material.navigation.NavigationView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="पोलीस भर्ती"
-            android:layout_gravity="center"
-            android:textSize="@dimen/_20sdp"
-            android:textColor="@color/white"
-            android:layout_marginLeft="@dimen/_10sdp"/>
+            android:layout_height="match_parent"
+            android:id="@+id/nav_view"
+            app:menu="@menu/nav_menu"
+            app:headerLayout="@layout/nav_header"
+            app:itemIconTint="@null"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_gravity="center"
-            android:id="@+id/selct_district_card"
-            android:layout_marginLeft="@dimen/_55sdp"
-            app:cardCornerRadius="@dimen/_8sdp"
-            android:backgroundTint="@color/blue">
-
-            <TextView
-                android:layout_width="wrap_content"
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="जिल्हा निवडा"
-                android:textColor="@color/white"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:layout_marginLeft="@dimen/_11sdp"
-                android:textSize="@dimen/_12sdp"/>
-        </androidx.cardview.widget.CardView>
+                android:id="@+id/toolbar"
+                android:background="@color/primary"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                android:title="She Safe"
+                android:titleTextColor="@color/white"
+                android:titleMarginStart="10dp"
+                android:layout_marginBottom="5dp"
+                tools:ignore="MissingConstrants">
 
-        <ImageView
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/bell"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_12sdp"/>
-    </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_50sdp"
+                    android:background="@color/primary"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="पोलीस भर्ती"
+                        android:layout_gravity="center"
+                        android:textSize="@dimen/_20sdp"
+                        android:textColor="@color/white"/>
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="@dimen/_80sdp"
+                        android:layout_height="@dimen/_35sdp"
+                        android:layout_gravity="center"
+                        android:id="@+id/selct_district_card"
+                        android:layout_marginLeft="@dimen/_35sdp"
+                        app:cardCornerRadius="@dimen/_8sdp"
+                        android:backgroundTint="@color/blue">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="जिल्हा निवडा"
+                            android:textColor="@color/white"
+                            android:layout_marginTop="@dimen/_8sdp"
+                            android:layout_marginLeft="@dimen/_11sdp"
+                            android:textSize="@dimen/_12sdp"/>
+                    </androidx.cardview.widget.CardView>
+
+                    <ImageView
+                        android:layout_width="@dimen/_25sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:src="@drawable/bell"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/_12sdp"/>
+                </LinearLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+
+
+
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -109,6 +142,7 @@
                     android:layout_width="@dimen/_130sdp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/_20sdp"
+                    app:strokeWidth="@dimen/_1sdp"
                     android:backgroundTint="@color/white"
                     app:strokeColor="@color/primary">
 
@@ -118,6 +152,7 @@
                         android:layout_margin="@dimen/_3sdp"
                         android:id="@+id/districtwisecard"
                         android:backgroundTint="@color/white"
+                        app:strokeWidth="@dimen/_1sdp"
                         app:strokeColor="@color/primary">
 
                         <LinearLayout
@@ -159,6 +194,7 @@
                     android:layout_width="@dimen/_130sdp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/_20sdp"
+                    app:strokeWidth="@dimen/_1sdp"
                     android:backgroundTint="@color/white"
                     app:strokeColor="@color/primary">
 
@@ -167,6 +203,8 @@
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_3sdp"
                         android:backgroundTint="@color/white"
+                        app:strokeWidth="@dimen/_1sdp"
+                        android:theme="@style/CardView"
                         app:strokeColor="@color/primary">
 
                         <LinearLayout
@@ -215,6 +253,7 @@
                     android:layout_width="@dimen/_130sdp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/_20sdp"
+                    app:strokeWidth="@dimen/_1sdp"
                     android:backgroundTint="@color/white"
                     app:strokeColor="@color/primary">
 
@@ -222,6 +261,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_3sdp"
+                        app:strokeWidth="@dimen/_1sdp"
                         android:backgroundTint="@color/white"
                         app:strokeColor="@color/primary">
 
@@ -265,6 +305,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/_20sdp"
                     android:backgroundTint="@color/white"
+                    app:strokeWidth="@dimen/_1sdp"
                     app:strokeColor="@color/primary">
 
                     <com.google.android.material.card.MaterialCardView
@@ -272,6 +313,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_3sdp"
                         android:backgroundTint="@color/white"
+                        app:strokeWidth="@dimen/_1sdp"
                         app:strokeColor="@color/primary">
 
                         <LinearLayout
@@ -317,6 +359,7 @@
                     android:layout_width="@dimen/_130sdp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/_20sdp"
+                    app:strokeWidth="@dimen/_1sdp"
                     android:backgroundTint="@color/white"
                     app:strokeColor="@color/primary">
 
@@ -324,6 +367,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_3sdp"
+                        app:strokeWidth="@dimen/_1sdp"
                         android:backgroundTint="@color/white"
                         app:strokeColor="@color/primary">
 
@@ -366,6 +410,7 @@
                     android:layout_width="@dimen/_130sdp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/_20sdp"
+                    app:strokeWidth="@dimen/_1sdp"
                     android:backgroundTint="@color/white"
                     app:strokeColor="@color/primary">
 
@@ -373,6 +418,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_3sdp"
+                        app:strokeWidth="@dimen/_1sdp"
                         android:backgroundTint="@color/white"
                         app:strokeColor="@color/primary">
 
@@ -450,10 +496,10 @@
                 android:layout_marginLeft="@dimen/_30sdp"
                 android:layout_gravity="center"/>
 
-
-
-
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+        </LinearLayout>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
 </LinearLayout>
