--- a/app/src/main/res/layout/activity_show_all_district_question.xml
+++ b/app/src/main/res/layout/activity_show_all_district_question.xml
@@ -60,6 +60,8 @@
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_50sdp"
             android:backgroundTint="@color/white"
+            android:theme="@style/CardView"
+            app:strokeWidth="@dimen/_1sdp"
             app:strokeColor="@color/primary">
 
             <TextView
@@ -75,6 +77,7 @@
             android:layout_height="@dimen/_50sdp"
             android:layout_marginLeft="@dimen/_15sdp"
             android:backgroundTint="@color/white"
+            app:strokeWidth="@dimen/_1sdp"
             app:strokeColor="@color/primary">
 
             <TextView
@@ -96,6 +99,7 @@
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_50sdp"
             android:id="@+id/marathi_card"
+            app:strokeWidth="@dimen/_1sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
 
@@ -111,6 +115,7 @@
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginLeft="@dimen/_15sdp"
+            app:strokeWidth="@dimen/_1sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
 
@@ -133,6 +138,7 @@
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_50sdp"
             android:backgroundTint="@color/white"
+            app:strokeWidth="@dimen/_1sdp"
             app:strokeColor="@color/primary">
 
             <TextView
@@ -147,6 +153,7 @@
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginLeft="@dimen/_15sdp"
+            app:strokeWidth="@dimen/_1sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
 
