--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PoliceBharti" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PoliceBharti" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
+
+    <style name="CustomCardView" parent="Widget.MaterialComponents.CardView">
+        <item name="strokeColor">@color/primary</item>
+        <item name="strokeWidth">2dp</item>
     </style>
 
     <style name="Theme.PoliceBharti" parent="Base.Theme.PoliceBharti" />
