--- a/app/src/main/res/layout/activity_question_papre_pdf.xml
+++ b/app/src/main/res/layout/activity_question_papre_pdf.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="@color/secondary"
+    android:background="@color/secondary"
     android:orientation="vertical"
     tools:context=".Question_Papre_PDF_Activity">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
     <ImageView
         android:layout_width="@dimen/_25sdp"
         android:layout_height="@dimen/_30sdp"
@@ -21,296 +18,9 @@
         android:id="@+id/back"
         android:layout_margin="@dimen/_10sdp"/>
 
-        <LinearLayout
+        <WebView
+            android:id="@+id/webView"
             android:layout_width="match_parent"
-            android:layout_height="293dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_125sdp"
-                    android:layout_height="@dimen/_160sdp"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    app:cardCornerRadius="@dimen/_20sdp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="@dimen/_100sdp"
-                            android:layout_height="@dimen/_130sdp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/pdf" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="2019"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_20sdp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_marginLeft="@dimen/_30sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:backgroundTint="#33F63B"
-                    app:cardCornerRadius="@dimen/_10sdp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Download"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_15sdp" />
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_125sdp"
-                    android:layout_height="@dimen/_160sdp"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    app:cardCornerRadius="@dimen/_20sdp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="@dimen/_100sdp"
-                            android:layout_height="@dimen/_130sdp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/pdf" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="2018"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_20sdp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_marginLeft="@dimen/_30sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:backgroundTint="#33F63B"
-                    app:cardCornerRadius="@dimen/_10sdp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Download"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_15sdp" />
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="293dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_125sdp"
-                    android:layout_height="@dimen/_160sdp"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    app:cardCornerRadius="@dimen/_20sdp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="@dimen/_100sdp"
-                            android:layout_height="@dimen/_130sdp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/pdf" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="2017"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_20sdp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_marginLeft="@dimen/_30sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:backgroundTint="#33F63B"
-                    app:cardCornerRadius="@dimen/_10sdp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Download"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_15sdp" />
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_125sdp"
-                    android:layout_height="@dimen/_160sdp"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    app:cardCornerRadius="@dimen/_20sdp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="@dimen/_100sdp"
-                            android:layout_height="@dimen/_130sdp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/pdf" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="2016"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_20sdp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_marginLeft="@dimen/_30sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:backgroundTint="#33F63B"
-                    app:cardCornerRadius="@dimen/_10sdp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Download"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_15sdp" />
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="293dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_125sdp"
-                    android:layout_height="@dimen/_160sdp"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    app:cardCornerRadius="@dimen/_20sdp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="@dimen/_100sdp"
-                            android:layout_height="@dimen/_130sdp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/pdf" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="2015"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_20sdp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_marginLeft="@dimen/_30sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:backgroundTint="#33F63B"
-                    app:cardCornerRadius="@dimen/_10sdp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Download"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_15sdp" />
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
